# potato-cashback

./: .gitignore  config.py  main.py  pyproject.toml  requirements.txt  requirments.txt
KZcashback_bot/: app.py  config.py  functions.py  requirements.txt
hidden/: settings.json
hidden/admin/analytic/: index.html
hidden/admin/debugger/: index.html
hidden/admin/menu/: index.html
hidden/admin/message/: index.html  script.js
hidden/admin/message/menu/: index.html
hidden/admin/message/message/: index.html  script.js  style.css
hidden/admin/message/poll/: index.html  script.js  (+1 more)
hidden/admin/settings/: index.html  items.css  items.js  script.js
hidden/login/: index.html  script.js  style.css
potato-cashback-main/: config.py  main.py
potato-cashback-main/hidden/login/: index.html  script.js  style.css
potato-cashback-main/public/: index.html  style.css  uni.css
potato-cashback-main/public/phone/: index.html  script.js
potato-cashback-main/public/qr/: index.html  script.js  style.css
potato-cashback-main/public/table/: index.html  script.js
potato-cashback-main/py_modules/: admin.py  api.py  files.py  mongo.py
public/: 404.html  fake_data.js  index.html  openHidden.js  script.js  style.css  uni.css
public/app/: manifest.json
public/phone/: index.html  script.js  style.css
public/qr/: index.html  script.js  style.css
public/table/: index.html  script.js  smart.css  smart.js  style.css
py/: mongo.py
py_modules/: admin.py  api.py  files.py  mongo.py  whatsapp.py
py_modules/telegram/: classes.py  config.py  functions.py  telegram.py
(+1 files in other folders)
